[package]
name = "pluto_dev"
version = "0.1.0"
authors = ["Jonas Maier <1.jmaier.3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.8"
syntect = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
diesel = { version = "1.4", features = ["postgres", "chrono"] }
dotenv = "0.15"
chrono = "0.4"
fs_extra = "1.2"
quick-xml = { version = "0.22", features = ["serialize"] }
lazy_static = "1.4"
ureq = "2.1"
rustop = "1.1"
